--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="accessibility_header_text">Список колясок</string>
     <string name="buyticket_tariffs_text">Тарифы</string>
     <string name="buyticket_rules_text">Правила проезда</string>
+    <string name="btn_map">Карта</string>
 
 
 </resources>
