revert back bonus page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
     <string name="btn_exit_transport">Конец поездки</string>
     <string name="spend_bonus">Потратить бонусы</string>
 
-
+    <string name="action_settings">Settings</string>
 </resources>
