--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="spend_bonus">Потратить бонусы</string>
 
     <string name="action_settings">Settings</string>
+    <string name="duration_format_str">Время поездки: %s</string>
 </resources>
